2009-11-25  Kevin Ryde  <user42@zip.com.au>

	* man.el (Man-completion-table): default-directory "/" in case
	doesn't otherwise exist.  process-environment COLUMNS=999 so as
	not to truncate long names.  process-connection-type pipe to avoid
	any chance of hitting the pseudo-tty TIOCGWINSZ.  (Further to
	Bug#3717.)

2009-11-25  Juri Linkov  <juri@jurta.org>

	* man.el (Man-completion-table): Modify regexp to include
	section names to completion strings.  (Bug#3717)

2009-11-25  Juri Linkov  <juri@jurta.org>

	Search recursively in gzipped files.  (Bug#4982)

	* progmodes/grep.el (grep-highlight-matches): Add new options
	`always' and `auto'.  Doc fix.
	(grep-process-setup): Check `grep-highlight-matches' for
	`auto-detect' to determine the need to compute grep defaults.
	Move Windows/DOS specific --colors settings handling
	to `grep-compute-defaults'.  Check `grep-highlight-matches'
	to get the value of "--color=".
	(grep-compute-defaults): Compute `grep-highlight-matches' when it
	has the value `auto-detect'.  Move Windows/DOS specific settings
	from `grep-process-setup'.
	(zrgrep): New command with alias `rzgrep'.

2009-11-25  Juri Linkov  <juri@jurta.org>

	* doc-view.el (doc-view-mode): Set buffer-local `view-read-only'
	to nil instead of switching off view-mode.  (Bug#4896)

2009-11-25  Juri Linkov  <juri@jurta.org>

	Mouse-wheel scrolling for DocView Continuous mode.  (Bug#4896)

	* mwheel.el (mwheel-scroll-up-function)
	(mwheel-scroll-down-function): New defvars.
	(mwheel-scroll): Funcall `mwheel-scroll-up-function' instead of
	`scroll-up', and `mwheel-scroll-down-function' instead of
	`scroll-down'.

	* doc-view.el (doc-view-scroll-up-or-next-page)
	(doc-view-scroll-down-or-previous-page): Add optional ARG.
	Use this ARG in the call to image-scroll-up/image-scroll-down.
	Change `interactive' spec to "P".  Goto next/previous page only
	when `doc-view-continuous-mode' is non-nil or ARG is nil (for the
	SPC/DEL case).  Doc fix.